# stock-researcher-and-predictor

./: .gitignore  LICENSE  OLLAMA_SETUP.md  README.md  claude.md  run-dev.sh
.claude/: hooks.json
backend/: main.py  pyproject.toml  test_enhanced_technical.py  test_finnhub.py  test_ollama.py  test_simple.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/agents/: __init__.py  decision_agent.py  graph.py  macro_agent.py  research_agent.py  sentiment_agent.py  state.py  technical_agent.py  technical_agent_enhanced.py
backend/app/services/: __init__.py  finnhub_service.py  llm_service.py  macro_service.py  news_service.py  pattern_recognition.py  signal_service.py  stock_data.py
frontend/: INTEGRATION_README.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentProgress.tsx  EnhancedTechnicalAnalysis.tsx  EnhancedTechnicalTab.tsx  RecommendationSection.tsx  ResultsTabs.tsx  StockChart.tsx  StockInputSection.tsx  TechnicalConfigPanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
