[project]
name = "stock-research-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.6.10",
    "newsapi-python>=0.2.7",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.66",
]
